Ajout nouveau projet bibliothèque de classe pour boardgame + gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 ################################################################################
 
 /Chess2000/.vs
+/Chess2000/bin
+/Chess2000/obj
+/BoardGame/.vs
+/BoardGame/bin
+/BoardGame/obj
