tentative d'implementation de l'echec

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 ################################################################################
 
 /.vs
+/.idea
 /Chess2000/.vs
 /Chess2000/bin
 /Chess2000/obj
